; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/quantenna/qtnfmac/extr_trans.c_qtnf_trans_event_enqueue.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/quantenna/qtnfmac/extr_trans.c_qtnf_trans_event_enqueue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qtnf_bus = type { i32, i32, %struct.qtnf_qlink_transport }
%struct.qtnf_qlink_transport = type { i64, i32 }
%struct.sk_buff = type { i32 }

@.str = private unnamed_addr constant [37 x i8] c"event dropped due to queue overflow\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.qtnf_bus*, %struct.sk_buff*)* @qtnf_trans_event_enqueue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @qtnf_trans_event_enqueue(%struct.qtnf_bus* %0, %struct.sk_buff* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.qtnf_bus*, align 8
  %5 = alloca %struct.sk_buff*, align 8
  %6 = alloca %struct.qtnf_qlink_transport*, align 8
  store %struct.qtnf_bus* %0, %struct.qtnf_bus** %4, align 8
  store %struct.sk_buff* %1, %struct.sk_buff** %5, align 8
  %7 = load %struct.qtnf_bus*, %struct.qtnf_bus** %4, align 8
  %8 = getelementptr inbounds %struct.qtnf_bus, %struct.qtnf_bus* %7, i32 0, i32 2
  store %struct.qtnf_qlink_transport* %8, %struct.qtnf_qlink_transport** %6, align 8
  %9 = load %struct.qtnf_qlink_transport*, %struct.qtnf_qlink_transport** %6, align 8
  %10 = getelementptr inbounds %struct.qtnf_qlink_transport, %struct.qtnf_qlink_transport* %9, i32 0, i32 1
  %11 = call i64 @skb_queue_len(i32* %10)
  %12 = load %struct.qtnf_qlink_transport*, %struct.qtnf_qlink_transport** %6, align 8
  %13 = getelementptr inbounds %struct.qtnf_qlink_transport, %struct.qtnf_qlink_transport* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp slt i64 %11, %14
  %16 = zext i1 %15 to i32
  %17 = call i64 @likely(i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %30

19:                                               ; preds = %2
  %20 = load %struct.qtnf_qlink_transport*, %struct.qtnf_qlink_transport** %6, align 8
  %21 = getelementptr inbounds %struct.qtnf_qlink_transport, %struct.qtnf_qlink_transport* %20, i32 0, i32 1
  %22 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %23 = call i32 @skb_queue_tail(i32* %21, %struct.sk_buff* %22)
  %24 = load %struct.qtnf_bus*, %struct.qtnf_bus** %4, align 8
  %25 = getelementptr inbounds %struct.qtnf_bus, %struct.qtnf_bus* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 4
  %27 = load %struct.qtnf_bus*, %struct.qtnf_bus** %4, align 8
  %28 = getelementptr inbounds %struct.qtnf_bus, %struct.qtnf_bus* %27, i32 0, i32 0
  %29 = call i32 @queue_work(i32 %26, i32* %28)
  br label %34

30:                                               ; preds = %2
  %31 = call i32 @pr_warn(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0))
  %32 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %33 = call i32 @dev_kfree_skb(%struct.sk_buff* %32)
  store i32 -1, i32* %3, align 4
  br label %35

34:                                               ; preds = %19
  store i32 0, i32* %3, align 4
  br label %35

35:                                               ; preds = %34, %30
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}

declare dso_local i64 @likely(i32) #1

declare dso_local i64 @skb_queue_len(i32*) #1

declare dso_local i32 @skb_queue_tail(i32*, %struct.sk_buff*) #1

declare dso_local i32 @queue_work(i32, i32*) #1

declare dso_local i32 @pr_warn(i8*) #1

declare dso_local i32 @dev_kfree_skb(%struct.sk_buff*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
